--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,8 @@ section .text span{
     position: relative;
     display: inline-block;
 }
+@media only screen and (max-width: 600px) {
+    .text span {
+      font-size: 2rem;
+    }
+  }
